# veris-chat

./: .env.example  .gitignore  README.md  chore  config.yaml  environment.yaml  main.py  pyproject.toml  veris_and_epa.md
.github/workflows/: deploy.yml
.kiro/hooks/: spec-finish-rename.kiro.hook
.kiro/steering/: project_context.md
app/: chat_api.py
chat/: __init__.py  retriever.py
deploy/: ec2_config.yaml  ec2_launch.sh  push_clean.sh  user_data.sh
deploy_kg/: ec2_launch_kg.sh  user_data.sh
documents/: TODO.md  async.md  bedrock_caveats.md  config.yaml  debug_7_vs_1_urls.md  environment_setup.md  frontend_checklist.md  requirement_design.md
lits/: __init__.py  config.py  framework_config.py  log.py  metrics.py  registry.py  type_registry.py  visualize.py
lits/agents/: __init__.py  base.py  (+2 more)
llm_chat/: session1.md
logs/: analysis.md
neptune_deployment/: parcelReports.js
rag_app/: __init__.py  chat_api.py
react/: __init__.py  loop.py  tools.py
react_app/: __init__.py  chat_api.py
script/: 1.test_ingestion.py  2.test_session_retrieval.py  3.test_citation.py  4.test_memory.py  5.test_chat_service.py  6.test_async_chat.py  README.md  test_bedrock.py  test_bedrock_converse_async.py  test_bedrock_llamaindex.py  test_chat_service.py  test_citation.py  test_ingestion.py  test_llm_tmp.py  test_mem0_fact_extraction.py  test_memory.py  test_retriever.py  test_session_retrieval.py
unit_test/: test_rag_e2e.sh  test_rag_e2e_attack.sh  test_react_e2e.sh  test_react_e2e_attack.sh  test_react_loop.py  test_react_tools.py
utils/: citation_query_engine.py
(+165 files in other folders)
