[project]
name = "veris-chat"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "llama-index>=0.9.0",
    "llama-index-llms-bedrock",
    "llama-index-embeddings-bedrock",
    "llama-index-vector-stores-qdrant",
    "qdrant-client>=1.7.0",
    "boto3>=1.34.0",
    "python-dotenv>=1.0.0",
    "pymupdf",
    "llama-index-llms-bedrock-converse",
    "mem0ai",
    "fastapi",
    "uvicorn",
    "neo4j",
]
